@@ -51,7 +51,7 @@ SYSTEM_CONFIG_FILE = "/etc/asus-screen-toggle.conf"
 # Cesty pro logiku přepínání (stejné jako v User Agent)
 STATE_DIR = os.path.expanduser("~/.local/state/asus-check-keyboard")
 STATE_FILE = os.path.join(STATE_DIR, "state")
-SCRIPT_PATH = "/usr/bin/asus-check-keyboard-user.sh"
+SCRIPT_PATH = "/usr/bin/asus-check-keyboard-user"
 
 # Cesty k ikonám
 ICON_PATH = "/usr/share/asus-screen-toggle"
@@ -493,7 +493,7 @@ class AsusSettingsApp(Gtk.Window):
                     # 2. Reloadnout pravidla (pokud 1. prošla)
                     # 3. Triggerovat události (pokud 2. prošla)
                     full_cmd = (
-                        "/usr/bin/asus-check-keyboard-genrules.sh && "
+                        "/usr/bin/asus-check-keyboard-genrules && "
                         "udevadm control --reload-rules && "
                         "udevadm trigger"
                     )
