@@ -52,7 +52,7 @@ except Exception as e:
 
 # --- Konfigurace ---
 BUS_NAME = "org.asus.ScreenToggle"
-SCRIPT_PATH = "/usr/bin/asus-check-keyboard-user.sh"
+SCRIPT_PATH = "/usr/bin/asus-check-keyboard-user"
 APP_ID = "asus-screen-toggler"
 ICON_NAME = "input-tablet"
 ICON_PATH = "/usr/share/asus-screen-toggle"
@@ -284,7 +284,7 @@ class AsusAgent:
         self.quit_callback()
 
     def _launch_settings(self):
-        try: subprocess.Popen(["/usr/bin/asus-screen-settings.py"])
+        try: subprocess.Popen(["/usr/bin/asus-screen-settings"])
         except: pass
         return False
 
