@@ -5,7 +5,7 @@ Name[fr]=Paramètres de l'écran Asus
 Name[es]=Configuración de pantalla Asus
 Comment=Control dual screen modes
 Comment[cs]=Nastavení pro Asus Zenbook Duo Screen Toggle
-Exec=/usr/bin/asus-screen-settings.py
+Exec=/usr/bin/asus-screen-settings
 Icon=/usr/share/asus-screen-toggle/icon-blue.svg
 Terminal=false
 Type=Application
