@@ -4,8 +4,8 @@ Name=Asus Screen Toggle Agent
 Name[cs]=Asus Screen Toggle Agent
 Comment=Control screen modes on Asus Zenbook Duo
 Comment[cs]=Ovládání režimů obrazovek na Asus Zenbook Duo
-Exec=/usr/bin/asus-screen-toggle-launcher.sh
+Exec=/usr/bin/asus-screen-toggle-launcher
 Icon=/usr/share/asus-screen-toggle/icon-green.svg
 Terminal=false
-Categories=Settings;Hardware;
+Categories=Settings;HardwareSettings;GTK;
 StartupNotify=false
