@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@
+	dh $@ --with python3
 
 override_dh_clean:
 	dh_clean -X.git
